# APF-Paper-9-Geometric-Substrate

./: .gitignore  APF_Reviewer_Walkthrough.ipynb  MANIFEST.custom  NEXT_STEPS.md  Paper_9_Geometric_Substrate_Cost_Structure_Technical_Supplement_v1.1.tex  Paper_9_Geometric_Substrate_Cost_Structure_v1.4.tex  Paper_9_Geometric_Substrate_Cost_Structure_v3.7.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  derivation_graph.json  generate_paper9_dag.py  interactive_dag.html  paper9_typed_dependency_dag.json  pyproject.toml  release_gate.py  repo_map.json  run_checks.py  theorems.json  zenodo.json
.github/workflows/: ci.yml
Old/: zenodo.json.pre-relation-fix
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  AUDIT_DISCIPLINE.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  FRAMEWORK_OVERVIEW.md  GLOSSARY.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  OPEN_PROBLEMS.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  repo_map.json  theorems.json
ai_context/wiki/: Index.md
ai_context/wiki/codebase/: APF Codebase.md  Cosmological Predictions.md  Open Problems.md  Predictions Catalog.md  Red Team Tests.md
ai_context/wiki/concepts/: Axiom A1.md  Born Rule.md  Derivation Chain.md  Enforcement Budget.md  Gauge Uniqueness.md  Gram Matrix.md  Non-Closure Theorem.md  (+4 more)
apf/: __init__.py  _release_fixtures.py  aboutness_occupancy_section.py  amount_graded_testedness.py  apf_utils.py  bank.py  continuation_calculus.py  core.py  gamma_c_carrier_program.py
artifacts/: RECEIPTS_SUMMARY.json  paper9_bank_audit.json  paper9_interface_atlas.json  paper9_interface_ci.json
docs/: index.html
(+9 files in other folders)
