[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apf-paper9"
version = "3.7.1"
description = "Geometric Substrate Cost Structure — executable mathematical appendix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Ethan Brooke", email = "brooke.ethan@gmail.com"}
]
keywords = ["geometric substrate", "comparison continuation", "metric emergence", "Schwarzschild redshift", "finite continuability", "cost-curvature", "weak-field GR", "no-trace gate", "unimodular response", "\u03b3_PPN", "research-program draft"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/Ethan-Brooke/APF-Paper-9-Geometric-Substrate"
"Bug Tracker" = "https://github.com/Ethan-Brooke/APF-Paper-9-Geometric-Substrate/issues"
"Zenodo" = "https://doi.org/10.5281/zenodo.20041675"

[tool.setuptools.packages.find]
include = ["apf*"]
